src/modules/dashboard/components/ColonyHome/ColonyDomainSelector/CreateDomainButton.css
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px 0;
  border-top: 1px solid var(--grey-blue-0);
}

.main {
  composes: button from "~styles/reset.css";
  display: flex;
  align-items: center;
  justify-content: center;
  height: 38px;
  width: 199px;
  border-radius: 15px;
  font-size: var(--size-small);
  font-weight: var(--weight-bold);
}

.main:focus {
  outline: var(--colony-blue) auto 1px;
}

.main:hover {
  background-color: color-mod(var(--colony-blue) alpha(10%));
  color: var(--colony-blue);

  /* Makes the SVG icon fill with color, dependent on the entire button hover state. */
  fill: var(--colony-blue);
}

.buttonIcon {
  position: absolute;
  bottom: 10px;
  left: 66px;
}

